k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hardening-demo
  namespace: hardening-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hardening-demo
  template:
    metadata:
      labels:
        app: hardening-demo
    spec:
      containers:
        - name: app
          image: devopsghazali/gitops-kubernetes-hardening:1.0.0
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
